# eternity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  docs.yml
breaking-changes/: search-index.js  source-files.js
breaking-changes/eternity/: all.html  enum.RateLimitAction.html  sidebar-items.js  struct.BucketBuilder.html  struct.RateLimitInfo.html
breaking-changes/eternity/multi_bucket/: struct.CachedLimitedEnumsModifier.html  struct.LimitedRequests.html  struct.LimitedRequestsModifier.html
breaking-changes/implementors/core/clone/: trait.Clone.js
breaking-changes/implementors/core/default/: trait.Default.js
breaking-changes/implementors/core/fmt/: trait.Debug.js
breaking-changes/implementors/core/marker/: trait.Send.js  trait.Sync.js  trait.Unpin.js
breaking-changes/implementors/std/panic/: trait.RefUnwindSafe.js
examples/: command.rs  endpoint.rs
master/: index.html
master/eternity/multi_bucket/: trait.ToBucket.html
master/implementors/core/marker/: trait.Freeze.js
master/implementors/std/panic/: trait.UnwindSafe.js
master/src/eternity/: lib.rs.html  multi_bucket.rs.html
src/: lib.rs  multi_bucket.rs
stable-changes/: crates.js  settings.html
stable-changes/eternity/: index.html  struct.Bucket.html
stable-changes/eternity/multi_bucket/: index.html  sidebar-items.js  struct.CachedLimitedEnums.html
stable-changes/src/eternity/: lib.rs.html
